--- a/index.html
+++ b/index.html
@@ -552,10 +552,9 @@
               <img src="Assets/project1.svg" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Business Websites</h3>
+                <h3 class="portfolio-title">Social Media Campaign</h3>
                 <p class="portfolio-description">
-                  Dynamic business sites that reflect your brand and engage
-                  customers effectively.
+                  Client: Ajmera x-change
                 </p>
                 <a
                   href="#"
@@ -571,10 +570,9 @@
               <img src="Assets/project2.svg" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Portfolio Websites</h3>
+                <h3 class="portfolio-title">Site Branding Design</h3>
                 <p class="portfolio-description">
-                  Impressive portfolio sites that showcase your talents with a
-                  flawless user experience.
+                 Client: Ajmera Cityscapes
                 </p>
                 <a
                   href="#"
