--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                   Client: Ajmera x-change
                 </p>
                 <a
-                  href="#"
+                  href="_blank"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
