--- a/index.html
+++ b/index.html
@@ -588,10 +588,10 @@
               <img src="Assets/project3.svg" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Landing Pages</h3>
+                <h3 class="portfolio-title">Freelancer Work</h3>
                 <p class="portfolio-description">
-                  Compelling landing pages that drive conversions and engage
-                  your audience.
+                  Clients: Local businesses, event planners, and individual clients.
+                  Shop Board Design, Wedding Invitations, Wedding Flex Designs, Festival Greetings
                 </p>
                 <a
                   href="#"
