--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             </div>
             <!-- project2  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project2.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project2.jpg" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
                 <h3 class="portfolio-title">Site Branding Design</h3>
