--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
           <div class="swiper-wrapper">
             <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project1.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project1.jpg" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
                 <h3 class="portfolio-title">Social Media Campaign</h3>
@@ -585,7 +585,7 @@
             </div>
             <!-- project3  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project3.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project3.jpg" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
                 <h3 class="portfolio-title">Freelancer Work</h3>
