--- a/index.html
+++ b/index.html
@@ -124,10 +124,13 @@
               <h1 class="home-title">Hi, I am Abhijit Jadhav</h1>
               <h3 class="home-subtitle">Graphic Designer</h3>
               <p class="home-description">
-                Passionate Graphic Designing specializing in Photoshop Software.
+                I'm Abhijit Jadhav, a passionate graphic designer with over 5.5 years of experience in branding, digital design, and social media. Let’s bring your ideas to life through creative design.
               </p>
+              <a href="https://abhijadhavwork.crevado.com/" class="button button-flex">
+                View Portfolio <i class="fa-regular fa-envelope button-icon"></i>
+              </a>
               <a href="#contact" class="button button-flex">
-                Contact Me <i class="fa-regular fa-envelope button-icon"></i>
+                Get in Touch <i class="fa-regular fa-envelope button-icon"></i>
               </a>
             </div>
           </div>
