--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
 
           <div class="about-data">
             <p class="about-description">
-              An accomplished Graphic Designer with a passion for creating visually striking and impactful designs. With a solid foundation in design principles, color theory, and typography, I specialize in crafting captivating graphics that communicate effectively and resonate with audiences. Leveraging my expertise in branding, visual storytelling, and modern design trends, I bring concepts to life, ensuring each project is a perfect blend of creativity, precision, and purpose.
-            </p>
+              Hi, I'm Abhijit Jadhav, a graphic designer dedicated to turning ideas into impactful visuals. With more than 5.5 years of professional experience, 
+              I specialize in crafting brand identities, promotional materials, and digital content that resonate with audiences. I believe design is more than just aesthetics—it’s a tool for connection, clarity.
+From logos and brochures to dynamic social media creatives, I combine creativity with strategy to deliver designs that not only look good but also drive results.</p>
 
             <div class="about-info">
               <div>
