--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <h1 class="home-title">Hi, I am Abhijit Jadhav</h1>
               <h3 class="home-subtitle">Graphic Designer</h3>
               <p class="home-description">
-                I'm Abhijit Jadhav, a passionate graphic designer with over 5.5 years of experience in branding, digital design, and social media. Let’s bring your ideas to life through creative design.
+                A passionate graphic designer with over 5.5 years of experience in branding. Let’s bring your ideas to life through creative design.
               </p>
               <a href="https://abhijadhavwork.crevado.com/" class="button button-flex">
                 View Portfolio <i class="fa-regular fa-envelope button-icon"></i>
