--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ From logos and brochures to dynamic social media creatives, I combine creativity
             <div class="about-buttons">
               <a
                 download=""
-                href="/D:\ALL_My Downloads\marketing_6\Downloads\Telegram Desktop\Responsive Portfolio Project 😭🫶🏻\Responsive Portfolio Project 😭🫶🏻\Assets/Resume.pdf"
+                href="/Assets/Resume.pdf"
                 class="button button-flex"
               >
                 Download CV<i
