--- a/index.html
+++ b/index.html
@@ -299,11 +299,20 @@ From logos and brochures to dynamic social media creatives, I combine creativity
                   <span class="qualification-line"></span>
                 </div>
               </div>
+              
 
               <!-- qualifi 4 -->
 
               <div class="qualification-data">
-                <div></div>
+                <div>
+                  <div>
+                  <h3 class="qualification-title">Digital Marketing</h3>
+                  <span class="qualification-subtitle">Online Course</span>
+                  <div class="qualification-date">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    2020 - 2022
+                  </div>
+                </div>
                 <div>
                   <span class="qualification-round"></span>
                   <!-- <span class="qualification-line"></span> -->
@@ -324,6 +333,7 @@ From logos and brochures to dynamic social media creatives, I combine creativity
                     <i class="fa-solid fa-calendar-days"></i>
                     2022 - Present
                   </div>
+                  
                 </div>
                 <div>
                   <span class="qualification-round"></span>
