--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ From logos and brochures to dynamic social media creatives, I combine creativity
                   <span class="qualification-subtitle">Online Course</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2020 - 2022
+                    2020 - 2021
                   </div>
                 </div>
               </div>
@@ -352,7 +352,7 @@ From logos and brochures to dynamic social media creatives, I combine creativity
                   <span class="qualification-subtitle">Popcorn Infotech Pvt Ltd</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2020 - 2022
+                    2019 - 2022
                   </div>
                 </div>
               </div>
@@ -365,7 +365,7 @@ From logos and brochures to dynamic social media creatives, I combine creativity
                   <span class="qualification-subtitle">Freelancer</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2019 - 2020
+                    2019 - Present
                   </div>
                 </div>
                 <div>
@@ -546,7 +546,7 @@ From logos and brochures to dynamic social media creatives, I combine creativity
 
       <!-- portfolio -->
       <section class="portfolio section" id="portfolio">
-        <h2 class="section-title">Projects</h2>
+        <h2 class="section-title">Designes</h2>
         <span class="section-subtitle">Most recent work</span>
 
         <div class="portfolio-container container swiper-container">
@@ -622,9 +622,9 @@ From logos and brochures to dynamic social media creatives, I combine creativity
         <div class="project-bg">
           <div class="project-container container grid">
             <div class="project-data">
-              <h2 class="project-title">Do you have a new project?</h2>
+              <h2 class="project-title">Got a creative idea in mind?</h2>
               <p class="project-description">
-                Contact me now and get a 50% discount on your new project.
+                Let’s bring it to life! Reach out now to get started on your next design project.
               </p>
               <a href="#contact" class="button button-flex button-white"
                 >Contact Me
